--- a/lain.yaml
+++ b/lain.yaml
@@ -15,7 +15,7 @@ test:
         - go test github.com/laincloud/entry/server
 
 web:
-    cmd: sleep 360000
+    cmd: ./entry-server
     memory: 256m
     env:
         - LAINLET_PORT=9001
