--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "xterm": "^3.2.0"
   },
   "homepage": "/web",
   "scripts": {
