--- a/lain.yaml
+++ b/lain.yaml
@@ -3,27 +3,28 @@ appname: entry
 build:
     base: golang:1.10
     prepare:
-        version: 20180207
+        version: 20180309
         script:
             # - sed -i 's|deb.debian.org|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
             # - sed -i 's|security.debian.org|mirrors.tuna.tsinghua.edu.cn/debian-security|g' /etc/apt/sources.list
-            # - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-            # - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-            # - apt-get -y update && apt-get -y install golang-glide
-            # - apt-get -y update && apt-get -y install yarn
+            - curl -sL https://deb.nodesource.com/setup_9.x | bash -
+            - apt-get -y update && apt-get -y install apt-transport-https ca-certificates golang-glide nodejs
+            - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+            - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+            - apt-get -y update && apt-get -y install yarn
             - mkdir -p $GOPATH/src/github.com/laincloud/entry
             - cp -rf . $GOPATH/src/github.com/laincloud/entry
-            # - cd $GOPATH/src/github.com/laincloud/entry && glide install
+            - cd $GOPATH/src/github.com/laincloud/entry && glide install
             - go install github.com/laincloud/entry/server/gen/cmd/entry-server
-            # - cd $GOPATH/src/github.com/laincloud/entry/frontend/ && yarn install
+            - cd $GOPATH/src/github.com/laincloud/entry/frontend/ && yarn install
     script:
         - cp -rf . $GOPATH/src/github.com/laincloud/entry
         - go install github.com/laincloud/entry/server/gen/cmd/entry-server
-        # - cd $GOPATH/src/github.com/laincloud/entry/frontend/ && yarn build
+        - cd $GOPATH/src/github.com/laincloud/entry/frontend/ && yarn build
 
 test:
     script:
-        - go test github.com/laincloud/entry/server
+        - go test github.com/laincloud/entry/server/...
 
 release:
     dest_base: laincloud/nginx:1.13
@@ -32,7 +33,7 @@ release:
           dest: /lain/app/entry-server
         - src: nginx.conf
           dest: /etc/nginx/conf.d/default.conf
-        - src: frontend/build
+        - src: $GOPATH/src/github.com/laincloud/entry/frontend/build
           dest: /usr/share/nginx/html
 
 web:  # backend
@@ -46,7 +47,7 @@ web:  # backend
     secret_files:
         - /lain/app/prod.json
     cloud_volumes:
-        type: multi
+        type: single
         dirs:
             - /cloud
 
