--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "xterm": "^3.2.0"
   },
   "homepage": "/web",
