--- a/lain.yaml
+++ b/lain.yaml
@@ -4,10 +4,10 @@ build:
     base: golang:1.10
     prepare:
         script:
-            - go get -u github.com/golang/dep/cmd/dep
+            - go get -u -v github.com/golang/dep/cmd/dep
             - cp -f /go/bin/dep /usr/local/bin/
-            - sed -i 's|deb.debian.org|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
-            - sed -i 's|security.debian.org|mirrors.tuna.tsinghua.edu.cn/debian-security|g' /etc/apt/sources.list
+            - sed -i 's|deb.debian.org|mirrors.ustc.edu.cn|g' /etc/apt/sources.list
+            - sed -i 's|security.debian.org|mirrors.ustc.edu.cn|g' /etc/apt/sources.list
             - curl -sL https://deb.nodesource.com/setup_9.x | bash -
             - apt-get -y update && apt-get -y install apt-transport-https ca-certificates nodejs
             - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
