--- a/lain.yaml
+++ b/lain.yaml
@@ -16,8 +16,8 @@ build:
     script:
         - mkdir -p /go/src/github.com/laincloud/entry
         - cp -rf server /go/src/github.com/laincloud/entry/
-        - cd /go/src/github.com/laincloud/entry/server && dep ensure -v
-        - time go install -v github.com/laincloud/entry/server/gen/cmd/entry-server
+        - go install -v github.com/laincloud/entry/server/gen/cmd/entry-server
+        - npm config set registry https://registry.npm.taobao.org
         - cd frontend/ && yarn install
         - cd frontend/ && yarn build
 
